@@ -1,6 +1,7 @@
 Revision history for Business-PayPoint-MCPE
 
 {{$NEXT}}
+        - Added missing prereq URI::Escape (manwar)
 
 0.01  2014-07-02 20:17:59 CST
         - Initial release
